# ts-schema

./: Cargo.toml  README.md
example/: a.ts  b.ts
src/: main.rs
