[package]
name = "ts-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
schemars = "0.8.22"
serde_json = "1.0.140"
swc_common = { version = "8.1.1", features = ["tty-emitter"] }
swc_ecma_ast = "8.1.2"
swc_ecma_parser = { version = "11.1.3", features = ["typescript"] }
swc_ecma_visit = "8.0.0"
